Updates Made in this commit: .) Updated variables to use Shared_Data_Registry for plan_name, user_id ...
.) Created get System Variables

Next To Do:

.) MPS methods and ingredients table functions need to be updated.

.) Edit Screen delete / refresh btn

.) MPS refactored methods

Previous Updates:
.)

Errors
.)